k8s-files/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: hello-barbara
  name: hello-barbara
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      run: hello-barbara
  template:
    metadata:
      labels:
        run: hello-barbara
    spec:
      containers:
      - image: bbeckerdarosa/hello-barbara-3:latest
        imagePullPolicy: Always
        name: hello-barbara-3
        resources: {}
        ports:
          - containerPort: 5000
      restartPolicy: Always
