k8s-files/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-barbara
  labels:
    run: hello-barbara
spec:
  ports:
  - port: 5000
    nodePort: 32145
    protocol: TCP
  selector:
    app: hello-barbara
  type: NodePort
